# simple-zonos

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: demo.py  lib.py
src/zonos/: autoencoder.py  codebook_pattern.py  conditioning.py  config.py  model.py  sampling.py  speaker_cloning.py
src/zonos/backbone/: _mamba_ssm.py  _torch.py
